Update swagger
Former-commit-id: bf90aa44ac4c4a9b7130ebcc726646b0e037e1f1
